Fixed Lightbox bug with darkened layer covering header

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1087,3 +1087,7 @@ button i    {   @extend body;font-size:2.0rem;   }
 div.pp_pic_holder {
 z-index: 120000 !important;
 }
+
+div.pp_overlay {
+z-index: 110000 !important;
+}
